// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/Container snapshot (wide) 1`] = `
.c0 {
  margin: 0 auto;
  padding: 0 0px;
  max-width: 1280px;
}

<div
  className="c0"
>
  Some content
</div>
`;

exports[`components/Container snapshot 1`] = `
.c0 {
  margin: 0 auto;
  padding: 0 40px;
  max-width: 1040px;
}

<div
  className="c0"
>
  Some content
</div>
`;
